--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <link rel="icon" type="image/png" href="favicon.png">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpVhQiwAllg1RAFaxMWSpQruuGARy0Y1k&libraries=places"></script>
+  <!-- <link href="https://framework-gb.cdn.gob.mx/assets/styles/main.css" rel="stylesheet"> -->
 </head>
 <body>
   <ngx-app>Loading...</ngx-app>
@@ -23,6 +24,6 @@
     <div class="blob blob-4"></div>
     <div class="blob blob-5"></div>
   </div>
-
+  <!-- <script src="https://framework-gb.cdn.gob.mx/gobmx.js"></script> -->
 </body>
 </html>
